examples/bad/divbyzero.hid
/* Program will end with an error caused by trying to divide something by 0 */

int a;
int b;
b = ^^a;
print (b/a);
